<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" 
            android:layout_weight="0.25">

            <Button
                android:id="@+id/btnNewPic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onNewItemButtonClick"
                android:text="@string/newPic" />

            <Button
                android:id="@+id/btnBrowseColl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/browseCollections" />

            <Button
                android:id="@+id/btnNewColl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/newCollection" />

        </LinearLayout>

        <Button
            android:id="@+id/btnRecent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.00"
            android:text="@string/recentItems" />


</LinearLayout>