<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="152dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" 
            android:layout_weight="1.00">



            <Button
                android:id="@+id/btnNewPic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="onNewItemButtonClick"
                android:text="@string/newItem" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.00"
            android:orientation="vertical" >


            <Button
                android:id="@+id/btnNewColl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:onClick="onNewCollectionButtonClick"
                android:text="@string/newCollection" />

            <Button
                android:id="@+id/btnBrowseColl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:onClick="onBrowseCollectionsButtonClick"
                android:text="@string/browseCollections" />
        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnRecent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/recentItems"
            android:onClick="onRecentButtonClick" />
    </LinearLayout>

</LinearLayout>