<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Sharing Manager"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <QuickContactBadge
        android:id="@+id/quickContactBadge1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:text="@string/newContact"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="2.50"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/fieldName"
            android:selectAllOnFocus="true" >

            <requestFocus />
        </EditText>

        <Spinner
            android:id="@+id/spinnerPerm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3.20"
            android:entries="@array/permArray" />
		<Button
            android:id="@+id/buttonAdd"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onAddButtonClick"
            android:text="@string/btnAdd"
            android:textSize="15sp" />
    </LinearLayout>
    
    <ListView
        android:id="@+id/listSharers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:hapticFeedbackEnabled="true" >

    </ListView>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|right" >

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCancelButtonClick"
            android:text="@string/btnCancel"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onDoneButtonClick"
            android:text="@string/btnDone"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>