<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />

        <!-- <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:selectAllOnFocus="true" > 

            <requestFocus />
        </EditText> -->
    </LinearLayout>

<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    
    <Spinner
        android:id="@+id/collectionSpinner"
        android:layout_width="248dip"
        android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="takePicture"
            android:text="Take Pic"
            android:textSize="20sp" />
    </LinearLayout>
    
    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="235dip"
        android:layout_weight="1" >


        <!-- <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:src="@android:drawable/btn_star" /> -->

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_launcher" />

    </FrameLayout>

    <!-- <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher" /> -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tags"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAddTag"
            android:onClick="onAddTag"
            android:textSize="25sp"/>

        <Gallery
            android:id="@+id/galleryTags"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:gravity="center_horizontal"
            android:spacing="50px"
            android:scrollbars="horizontal"
            android:scrollbarFadeDuration="0"
            android:scrollX="50px" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right" >

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel"
            android:onClick="onCancelButtonClick"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDone"
            android:onClick="onDoneButtonClick"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>